[package]
name = "sketches"
version = "0.1.0"
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
rayon = "1.5.1"
indicatif = "0.16.2"
structopt = "0.3.23"

